Updating dependencies
This version of the plugin requires java 21 to work.